log/build_2025-12-17_19-50-57/tower_builder/stderr.log
  File "/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main_mod.py", line 200
    movej=(posx([px, py, safe_z, rx, ry, rz]), vel=VELOCITY, acc=ACC)
                                               ^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

